adl-frontend/src/test/resources/unit/error/syntactic/Primitive2.adl
primitive Primitive2 {
	src my.c;	
}